Fix for bug 90152 -- corrected logic for displaying an alt content of the object tag, r=peterl, sr=watercon