layout/html/base/src/nsObjectFrame.cpp
@@ -911,19 +911,25 @@ nsObjectFrame::Reflow(nsIPresContext*          aPresContext,
           fullURL = baseURL;
         }
 
-        // if we didn't find the type, but we do have a src, we can
-        // determine the mimetype based on the file extension
+        // now try to instantiate a plugin instance based on a mime type
         const char* mimeType = mimeTypeStr.get();
-        if (!mimeType && src.get()) {
-          nsXPIDLCString extension;
-          PRInt32 offset = src.RFindChar(PRUnichar('.'));
-          if (offset != kNotFound) {
-            *getter_Copies(extension) = ToNewCString(Substring(src, offset+1, src.Length()));
+        if (mimeType || (src.Length() > 0)) {
+          if (!mimeType) {
+            // we don't have a mime type, try to figure it out from extension
+            nsXPIDLCString extension;
+            PRInt32 offset = src.RFindChar(PRUnichar('.'));
+            if (offset != kNotFound)
+              *getter_Copies(extension) = ToNewCString(Substring(src, offset+1, src.Length()));
+            pluginHost->IsPluginEnabledForExtension(extension, mimeType);
           }
-          pluginHost->IsPluginEnabledForExtension(extension, mimeType);
+          // if we fail to get a mime type from extension we can still try to 
+          // instantiate plugin as it can be possible to determine it later
+          rv = InstantiatePlugin(aPresContext, aMetrics, aReflowState,
+                                 pluginHost, mimeType, fullURL);
         }
-        rv = InstantiatePlugin(aPresContext, aMetrics, aReflowState,
-                               pluginHost, mimeType, fullURL);
+        else // if we have neither we should not bother
+          rv = NS_ERROR_FAILURE;
+
       }
     }
   }
